[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/sewer.gd" type="Script" id=1]
[ext_resource path="res://sprites/sewer.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
resource_name = "loop"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 16 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 16 )

[node name="sewer" type="RigidBody2D"]
mode = 1
script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
hframes = 4

[node name="anim" type="AnimationPlayer" parent="."]
anims/loop = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 16 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 10 )
shape = SubResource( 3 )

[node name="timer" type="Timer" parent="."]
wait_time = 0.1

[node name="enabler" type="VisibilityEnabler2D" parent="."]
scale = Vector2( 4, 4 )
process_parent = true
physics_process_parent = true
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="timer" to="." method="check_player"]
